se agrega Modal para Gestion de nuevos Contratos con tabs de contrato ,arrendatario y pendiente

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@
 /fuel/app/logs/*/*/*
 /fuel/app/cache/*/*
 /fuel/app/config/crypt.php
+
+# Sistema de Ventas (desktop reference)
+/"Sistema de Ventas la Vitrina/"
